fix: Prevent righthand-nav from overlapping the footer on short screens

--- a/ietf/static/css/ietf.scss
+++ b/ietf/static/css/ietf.scss
@@ -171,6 +171,7 @@ table tbody.meta {
 // Style the righthand navigation panel
 #righthand-panel {
     max-height: 80vh;
+    z-index: -1;
 }
 
 #righthand-nav {
